two options for slideshow in landing component, all slideshow elements are commented out

--- a/src/App.css
+++ b/src/App.css
@@ -480,3 +480,12 @@ table th {
     font-size: 1.2rem;
   }
 }
+
+/* .each-slide{
+width: 85%;
+height: 20rem;
+}
+
+.slide-container{
+  background-color:red;
+} */
