add story works and slideshow

--- a/src/App.css
+++ b/src/App.css
@@ -489,3 +489,60 @@ height: 20rem;
 .slide-container{
   background-color:red;
 } */
+
+/* 
+
+.slide-container {
+  width: 70%;
+  margin: auto; }
+
+  .each-slide > div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-size: cover;
+    height: 300px;
+  }
+
+  .each-slide span {
+    padding: 20px;
+    font-size: 20px;
+    background: #efefef;
+    text-align: center;
+    /* margin-top: 40%; */
+  /* }
+  
+  .each-fade {
+    display: flex;
+  }
+  
+  .each-fade .image-container {
+    width: 75%;
+    overflow: hidden;
+  } */
+  
+  .each-fade .image-container img {
+    width: 100%;
+  }
+  
+  /* .each-fade h2 {
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    background: #adceed;
+  } */
+
+  /* Post styling */
+  /* .card{
+    font-family: monospace;
+    text-align: left;
+    background-color: tan;
+    width: 35%;
+    margin-bottom: 2%;
+    margin-left: 34%;
+  } */
+
+ 
+ 
